# Keyhold-Rental-Security-Deposits-on-Stellar

./: ARCHITECTURE.md  Cargo.toml  DEPLOYMENT.md  README.md
.github/workflows/: ci.yml
contracts/deposit/: Cargo.toml
contracts/deposit/src/: lib.rs  test.rs
contracts/inspection/: Cargo.toml
contracts/inspection/src/: lib.rs  test.rs
frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: ActivityFeed.jsx  CreateLeaseForm.jsx  Header.jsx  Hero.jsx  KeyStatus.jsx  LeaseCard.jsx  LeaseCardSkeleton.jsx  LeaseTimeline.jsx
frontend/src/hooks/: useCountdown.js  useWallet.js
frontend/src/lib/: config.js  depositActions.js  events.js  formatEvent.js  sorobanClient.js  wallet.js
frontend/src/test/: KeyStatus.test.jsx  formatEvent.test.js  useCountdown.test.jsx
scripts/: deploy.sh
