[package]
name = "deposit"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = "27.0.0"
inspection = { path = "../inspection",  }

[dev-dependencies]
soroban-sdk = { version = "27.0.0", features = ["testutils"] }
inspection = { path = "../inspection", features = ["testutils"] }

[features]
testutils = ["soroban-sdk/testutils"]
